--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.0.10",
+    "immer": "^10.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
-    "styled-components": "^6.0.5"
+    "styled-components": "^6.0.5",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
